# engorgio-engine-public

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  clean.sh  cmake_build.sh  make_build.sh  run_docker.sh
.deprecated/NeuralEnhancer/include/: BaseModel.h  DecodeEngine.h  common.h  cuDeviceMemory.h  cuHostMemory.h  cudaUtility.h  logging.h
.deprecated/NeuralEnhancer/src/Common/: CMakeLists.txt  cudaUtility.cu
.deprecated/NeuralEnhancer/src/Engine/: CMakeLists.txt  DecodeEngine.cpp
.deprecated/NeuralEnhancer/src/Memory/: CMakeLists.txt  cuDeviceMemory.cpp
.deprecated/NeuralEnhancer/src/Model/: BaseModel.cpp  CMakeLists.txt
.deprecated/NeuralEnhancer/test/Common/: testUtility.h
.deprecated/NeuralEnhancer/test/Engine/: CMakeLists.txt  testDecode.cpp
.deprecated/NeuralEnhancer/test/Memory/: CMakeLists.txt  testHostCorrectness.cpp  testMemory.cpp
.deprecated/NeuralEnhancer/test/Model/: CMakeLists.txt  testBaseModel.cpp  testBuild.cpp  testInfer.cpp  testLoad.cpp  testStream.cpp
.deprecated/section8/: benchmark_baseline_e2e.py  benchmark_baseline_encode.py  benchmark_engorgio_e2e.py  setup_rgb_frames.py
.deprecated/test/: CMakeLists.txt  Makefile  calculate_psnr.py  cmake_install.cmake  convert_to_raw.py  summary_ipp.py  test_ipp  test_ipp.cpp  test_libturbo_jpeg  test_libturbo_jpeg.cpp
compiler/include/: compile_common.h  compile_engine.h
compiler/src/: CMakeLists.txt  Makefile  cmake_install.cmake  compile_common.cpp  compile_engine.cpp
compiler/test/: CMakeLists.txt  Makefile  cmake_install.cmake  testCompileEngine  test_compile_engine.cpp
controller/include/: anchor_engine.h  control_common.h  controller.h  decode_engine.h
controller/src/: CMakeLists.txt  Makefile  anchor_engine.cpp  cmake_install.cmake  control_common.cpp  controller.cpp  decode_engine.cpp
controller/test/: CMakeLists.txt  Makefile  cmake_install.cmake  testDecodeEngine  test_anchor_engine.cpp  test_common.cpp  test_common.h  test_decode_engine.cpp
docker/: Dockerfile  build.sh  run.sh
enhancer/include/: cuDeviceMemory.h  cuHostMemoryV2.h  encode_engine.h  enhancer_common.h  infer_engine.h  libvpx_engine.h  neural_enhancer.h  neural_enhancer_server.h  remote_neural_enhancer.h  vpxenc_api.h
enhancer/src/: CMakeLists.txt  cuDeviceMemory.cpp  cuHostMemory.cpp  cuHostMemoryV2.cpp  cudaUtility.cu  encode_engine.cpp  enhancer.proto  infer_engine.cpp  libvpx_engine.cpp  neural_enhancer.cpp  neural_enhancer_server.cpp  remote_neural_enhancer.cpp  vpxenc_api.c
enhancer/test/: CMakeLists.txt  test_encode_engine.cpp  test_infer_engine.cpp  test_libvpx_engine.cpp  test_neural_enhancer.cpp
eval/: CMakeLists.txt  Makefile  benchmark_decode.cpp  benchmark_encode.cpp  benchmark_engorgio_asynch.cpp  benchmark_engorgio_sync_server.cpp  benchmark_engorgio_synch.cpp  benchmark_infer  benchmark_infer.cpp  benchmark_perframe_asynch.cpp  benchmark_perframe_synch.cpp  check_baseline_realtime.py  check_engorgio_realtime.py  cmake_install.cmake  latency_breakdown.py
tool/include/: tool_common.h
tool/src/: CMakeLists.txt  Makefile  ONNXTOPLAN  cmake_install.cmake  onnx_to_plan.cpp  tool_common.cpp
